--- a/templates/profil.html
+++ b/templates/profil.html
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil Pengguna</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/profil.css') }}" />
-</head>
-<body>
-  <div class="profile-container">
-    <div class="profile-header">
-      <img src="{{ url_for('static', filename='images/profil.jpg') }}" alt="User Icon" class="profile-icon" />
-      <h1>Profil Saya</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Profil Pengguna</title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/profil.css') }}"
+    />
+  </head>
+  <body>
+    <div class="profile-container">
+      <div class="profile-header">
+        <img
+          src="{{ url_for('static', filename='images/profil.jpg') }}"
+          alt="User Icon"
+          class="profile-icon"
+        />
+        <h1>Profil Saya</h1>
+      </div>
+      <div class="profile-details">
+        <p><strong>Nama:</strong> {{ current_user.name }}</p>
+        <p><strong>Pengalaman:</strong> {{ current_user.experience }}</p>
+        <p><strong>Skill:</strong> {{ current_user.skills }}</p>
+        <p><strong>Instansi:</strong> {{ current_user.institution }}</p>
+        <p><strong>Alamat:</strong> {{ current_user.address }}</p>
+        <p><strong>No. HP:</strong> {{ current_user.phone }}</p>
+        <p><strong>Email:</strong> {{ current_user.email }}</p>
+        <p>
+          <strong>CV:</strong>
+          {% if current_user.cv %}
+          <a
+            href="{{ url_for('static', filename='uploads/' + current_user.cv) }}"
+            target="_blank"
+            >Lihat CV</a
+          >
+          {% else %} Tidak ada file CV {% endif %}
+        </p>
+        <a href="{{ url_for('edit_profile') }}" class="btn-edit">Edit Profil</a>
+      </div>
     </div>
-    <div class="profile-details">
-      <p><strong>Nama:</strong> {{ current_user.name }}</p>
-      <p><strong>Pengalaman:</strong> {{ current_user.experience }}</p>
-      <p><strong>Skill:</strong> {{ current_user.skills }}</p>
-      <p><strong>Instansi:</strong> {{ current_user.institution }}</p>
-      <p><strong>Alamat:</strong> {{ current_user.address }}</p>
-      <p><strong>No. HP:</strong> {{ current_user.phone }}</p>
-      <p><strong>Email:</strong> {{ current_user.email }}</p>
-      <p><strong>CV:</strong> 
-        {% if current_user.cv %}
-          <a href="{{ url_for('static', filename='uploads/' + current_user.cv) }}" target="_blank">Lihat CV</a>
-        {% else %}
-          Tidak ada file CV
-        {% endif %}
-      </p>
-      <a href="{{ url_for('edit_profile') }}" class="btn-edit">Edit Profil</a>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
